--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'com.thetransactioncompany', name: 'cors-filter', version: '1.3.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
