--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'com.thetransactioncompany', name: 'cors-filter', version: '1.3.2'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+    implementation 'org.springframework:spring-context-support:5.1.4.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:2.1.2.RELEASE'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
